--- a/app/app.css
+++ b/app/app.css
@@ -1,15 +1,8 @@
 @import "tailwindcss";
 
-@theme {
-  --font-sans: "Inter", ui-sans-serif, system-ui, sans-serif,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-}
-
-html,
-body {
-  @apply bg-white dark:bg-gray-950;
-
-  @media (prefers-color-scheme: dark) {
-    color-scheme: dark;
-  }
+#hero{
+  background-image: url('/images/Glow.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
